add direct uploads
