# apps/api_v1/config/routes.rb
@@ -3,3 +3,5 @@ resources :projects, except: %i[new edit] do
     resources :comments, except: %i[new edit], controller: 'comments'
   end
 end
+
+post 'attachments/upload', to: AttachmentUploader.upload_endpoint(:cache)
